Bug 706724 - Fix for error: ‘ftruncate’ was not declared in this scope. r=benjamin